cmake_minimum_required(VERSION 3.17)
project(cub3d C)
set(CMAKE_C_STANDARD 99)
include_directories(mlx)
include_directories(libft)
include_directories(usr/local/include)
set(CMAKE_C_FLAGS "-lm -g")
set(CMAKE_C_FLAGS -g)
add_executable(cub3d main.c cub3d.h get_next_line.c get_next_line_utils.c)
target_link_libraries(cub3d "-framework OpenGL")
target_link_libraries(cub3d "-framework AppKit")
target_link_libraries(cub3d /usr/local/lib/libmlx.a)